# NotificationService

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  config.py  consumer.py  main.py  manage.py
src/api/: message.py  notifications.py  user.py
src/api/managers/: notification.py
src/common/: enums.py  exceptions.py  priorities.py
src/db/: database.py  redis.py
src/db/orm/: __init__.py  base.py  message.py  user.py
src/db/repo/: message.py  user.py
src/dto/: base.py  messages.py  notifications.py  user.py
src/migration/: env.py
src/migration/versions/: 2fbda6be5044_create_user.py  777d140b3388_add_table_message.py
src/pub_sub/: pub.py  sub.py
src/queues/: base.py  consumer.py  handlers.py  producer.py
src/scripts/: __init__.py  base.py  hello_world.py
src/service/: messages.py  notifications.py  password.py  user.py
